fixed trash button alignment

--- a/src/less/column.less
+++ b/src/less/column.less
@@ -40,6 +40,13 @@ span.status-closed {
 }
 
 
+body.edit-php {
+	#delete_all {
+		float: left;
+		margin-right: 3px;
+	}
+}
+
 body.users-php .tablenav .actions {
 	a.add-new-h2 {
 		float: none;
